# src/route/routes.ts
@@ -63,7 +63,7 @@ const models: TsoaRoute.Models = {
     "CategoryDTO": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"double","required":true},
+            "id": {"dataType":"double"},
             "name": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
@@ -447,13 +447,12 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.put('/loans/:id',
+        app.put('/loans',
             ...(fetchMiddlewares<RequestHandler>(LoanController)),
             ...(fetchMiddlewares<RequestHandler>(LoanController.prototype.updateLoan)),
 
             async function LoanController_updateLoan(request: ExRequest, response: ExResponse, next: any) {
             const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    id: {"in":"path","name":"id","required":true,"dataType":"double"},
                     loan: {"in":"body","name":"loan","required":true,"ref":"LoanDTO"},
                     success: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
                     fail: {"in":"res","name":"404","required":true,"ref":"BasicResponseDto"},
@@ -512,7 +511,7 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.get('/loans/:id',
+        app.get('/loans/id/:id',
             ...(fetchMiddlewares<RequestHandler>(LoanController)),
             ...(fetchMiddlewares<RequestHandler>(LoanController.prototype.findLoan)),
 
